# backtesting-engine

./: .cursorrules  .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: main.cpp
include/: ticker.h  world.h
src/: main_docs.cpp  ticker.cpp  world.cpp
tests/: world_tests.cpp
